Fix h1 on mobile devices

--- a/css/shared.css
+++ b/css/shared.css
@@ -91,8 +91,15 @@ footer {
 }
 
 h1 {
-	padding: 10px 0;
-	margin: 10px 0 10px 20%;
+	padding: 1% 0;
+	margin: 1% 0 1% 20%;
+}
+
+@media (max-width: 768px) {
+	h1 {
+		text-align: center;
+		margin: 1% 0;
+	}
 }
 
 h3 {
